# 3588

./: .bashrc  .gitignore  ReadMe.txt  setup_can.sh
GPS/: GPS_GPCHC_recorder.cpp  GR_red.cpp
GPS/CGI610/: CGI610_GPS_recorder.cpp  GPS_recorder_map
GPS/INS821/: INS821_GPS_recorder.cpp  INS821_recorder
GPS/Poly_3000P/: 3000P  3000P_dynmaic  Poly3000P_GPS_recorder.cpp  Poly3000P_GPS_recorder_dynmaic.cpp
GPS/gps_path/: gps_path20250604144913.txt  gps_path20250609114507.txt  gps_path20250610103722.txt  gps_path20250610103917.txt  gps_path20250610104047.txt  gps_path20250610154120.txt  gps_path20250611145723.txt  gps_path20250611154908.txt  gps_path20250611160134.txt  gps_path20250612164249.txt  gps_path20250612164448.txt  gps_path20250612164458.txt  gps_path20250613111106.txt  gps_path20250613141430.txt  gps_path20250613141754.txt  gps_path20250613142704.txt  gps_path20250613143022.txt  gps_path20250613143648.txt  gps_path20250613144005.txt  gps_path20250613144053.txt  gps_path20250613144640.txt  gps_path20250613144704.txt  gps_path20250613145639.txt  gps_path20250613145707.txt  gps_path20250616161548.txt  gps_path20250616161629.txt  gps_path20250617105412.txt  gps_path20250617105622.txt  gps_path20250617105632.txt  gps_path20250617155734.txt  gps_path20250618103752.txt
地理库相关/geod_test/: CMakeLists.txt  main  main.cpp
控制程序/Ipopt/Ipopt-stable-3.14/: ChangeLog.md  configure  configure.ac
控制程序/Ipopt/Ipopt-stable-3.14/src/Algorithm/LinearSolvers/: IpPardisoMKLSolverInterface.cpp
控制程序/Ipopt/Ipopt-stable-3.14/src/Common/: config_ipopt_default.h
控制程序/Ipopt/ThirdParty-Mumps-stable-3.0/: Makefile  Makefile.in  README.md  coinmumps.pc  config.h  config.status  configure  configure.ac  dmumps_ana_aux_m.mod  dmumps_ana_lr.mod  dmumps_buf.mod  dmumps_c.c  dmumps_c.lo  dmumps_dynamic_memory_m.mod  dmumps_fac1_ldlt_m.mod  dmumps_fac1_lu_m.mod  dmumps_fac2_ldlt_m.mod  dmumps_fac2_lu_m.mod  dmumps_fac_asm_master_elt_m.mod  dmumps_fac_asm_master_m.mod  dmumps_fac_front_aux_m.mod  dmumps_fac_front_type2_aux_m.mod  dmumps_fac_lr.mod  dmumps_fac_omp_m.mod  dmumps_fac_par_m.mod  dmumps_facsol_l0omp_m.mod  dmumps_load.mod  dmumps_lr_core.mod  dmumps_lr_data_m.mod  dmumps_lr_stats.mod  dmumps_mpi3_mod.mod  dmumps_ooc.mod  dmumps_parallel_analysis.mod  dmumps_save_restore.mod  dmumps_save_restore_files.mod  dmumps_sol_es.mod  dmumps_sol_l0omp_m.mod  dmumps_sol_lr.mod  dmumps_static_ptr_m.mod  dmumps_struc_def.mod  (+15 more)
控制程序/Ipopt/ThirdParty-Mumps-stable-3.0/.deps/: dmumps_c.Plo
控制程序/Ipopt/ThirdParty-Mumps-stable-3.0/.libs/: libcoinmumps.lai  libcoinmumps.so.3.0.9
控制程序/MPC_routine/: CMakeLists.txt  MPC.cpp  MPC.h  MPC_demo.cpp
控制程序/Monitor_Control/: README.md  compile_and_run_monitor.sh  monitor_maincontrol.cpp  run_maincontrol.sh
控制程序/log/: log_2025-06-06 14_06_48.txt  log_2025-06-06 14_07_46.txt  log_2025-06-06 14_15_58.txt  log_2025-06-06 14_41_04.txt  log_2025-06-06 14_43_03.txt  log_2025-06-06 14_44_54.txt  log_2025-06-06 14_48_35.txt  log_2025-06-06 14_55_27.txt  log_2025-06-06 14_59_14.txt  log_2025-06-06 15_02_00.txt  log_2025-06-06 16_07_54.txt  log_2025-06-06 16_11_16.txt  log_2025-06-06 16_15_58.txt  log_2025-06-06 16_18_12.txt  log_2025-06-06 16_20_10.txt  log_2025-06-09 11_06_58.txt  log_2025-06-09 11_09_02.txt  log_2025-06-09 11_10_10.txt  log_2025-06-09 11_18_57.txt  log_2025-06-09 11_20_25.txt  log_2025-06-09 11_32_28.txt  log_2025-06-09 11_43_28.txt  log_2025-06-09 13_52_49.txt  log_2025-06-09 14_08_37.txt  log_2025-06-10 09_23_19.txt  log_2025-06-10 10_51_37.txt  log_2025-06-10 10_52_03.txt  log_2025-06-10 10_52_15.txt  log_2025-06-10 10_53_37.txt  log_2025-06-10 11_00_17.txt  log_2025-06-10 11_00_36.txt  log_2025-06-10 11_20_26.txt  log_2025-06-10 15_58_06.txt  log_2025-06-10 16_36_40.txt  log_2025-06-10 16_36_46.txt  log_2025-06-10 17_01_22.txt  log_2025-06-10 17_06_22.txt  log_2025-06-10 17_06_55.txt  log_2025-06-11 14_26_02.txt  log_2025-06-11 15_06_29.txt  (+78 more)
控制程序/mainControl_Test/: CMakeLists.txt
控制程序/mainControl_Test/backup/: control_20241213.cpp  control_20241216.cpp
控制程序/mainControl_Test/data/control/: 20241216095801_1.txt
控制程序/mainControl_Test/include/: optimal_lookahead_calculator.h
控制程序/mainControl_Test/src/: control.cpp  control_HY_0529_MPC.cpp  optimal_lookahead_calculator.cpp  test_lookahead.cpp
控制程序/mainControl_Test/src/backup/: control.cpp
数据库(暂存)/DataBase/: can-data-recorder.py  requirements.txt  setup-database-sql.sql
数据库(暂存)/DataBase/record/: can_20241213_093044.txt  can_20241213_093347.txt  can_20241213_093350.txt  can_20241213_094445.txt  can_20241213_105541_304.txt  can_20241213_105605_657.txt  can_20241213_105610_794.txt  can_20241213_105621_137.txt
